Added user models for storing the user devices data entirely on my server. I've added methods for subscription and all. Next to effect the switch from FCM to my own implementation.
